etc/ui.for_clang_parse.h

 void uiQueueMain(void (*f)(void *data), void *data);
 void uiTimer(int milliseconds, int (*f)(void *data), void *data);
 void uiOnShouldQuit(int (*f)(void *data), void *data);
typedef struct uiWindow uiWindow;
#define uiWindow(this) ((uiWindow *) (this))
 void uiWindowOnContentSizeChanged(uiWindow *w, void (*f)(uiWindow *, void *), void *data);
 void uiWindowOnClosing(uiWindow *w, int (*f)(uiWindow *w, void *data), void *data);
typedef struct uiButton uiButton;
 void uiButtonOnClicked(uiButton *b, void (*f)(uiButton *b, void *data), void *data);
typedef struct uiCheckbox uiCheckbox;
 void uiCheckboxOnToggled(uiCheckbox *c, void (*f)(uiCheckbox *c, void *data), void *data);
typedef struct uiEntry uiEntry;
 void uiEntryOnChanged(uiEntry *e, void (*f)(uiEntry *e, void *data), void *data);
typedef struct uiSpinbox uiSpinbox;
 void uiSpinboxOnChanged(uiSpinbox *s, void (*f)(uiSpinbox *s, void *data), void *data);
typedef struct uiSlider uiSlider;
 void uiSliderOnChanged(uiSlider *s, void (*f)(uiSlider *s, void *data), void *data);
typedef struct uiCombobox uiCombobox;
 void uiComboboxOnSelected(uiCombobox *c, void (*f)(uiCombobox *c, void *data), void *data);
typedef struct uiEditableCombobox uiEditableCombobox;
 void uiEditableComboboxOnChanged(uiEditableCombobox *c, void (*f)(uiEditableCombobox *c, void *data), void *data);
typedef struct uiRadioButtons uiRadioButtons;
 void uiRadioButtonsOnSelected(uiRadioButtons *r, void (*f)(uiRadioButtons *, void *), void *data);
struct tm;
typedef struct uiDateTimePicker uiDateTimePicker;
#define uiDateTimePicker(this) ((uiDateTimePicker *) (this))
 void uiDateTimePickerTime(uiDateTimePicker *d, struct tm *time);
 void uiDateTimePickerSetTime(uiDateTimePicker *d, const struct tm *time);
 void uiDateTimePickerOnChanged(uiDateTimePicker *d, void (*f)(uiDateTimePicker *, void *), void *data);
 uiDateTimePicker *uiNewDateTimePicker(void);
 uiDateTimePicker *uiNewDatePicker(void);
 uiDateTimePicker *uiNewTimePicker(void);
typedef struct uiMultilineEntry uiMultilineEntry;
#define uiMultilineEntry(this) ((uiMultilineEntry *) (this))
 char *uiMultilineEntryText(uiMultilineEntry *e);
 void uiMultilineEntrySetText(uiMultilineEntry *e, const char *text);
 void uiMultilineEntryAppend(uiMultilineEntry *e, const char *text);
 void uiMultilineEntryOnChanged(uiMultilineEntry *e, void (*f)(uiMultilineEntry *e, void *data), void *data);
 int uiMultilineEntryReadOnly(uiMultilineEntry *e);
 void uiMultilineEntrySetReadOnly(uiMultilineEntry *e, int readonly);
 uiMultilineEntry *uiNewMultilineEntry(void);
 uiMultilineEntry *uiNewNonWrappingMultilineEntry(void);
typedef struct uiMenuItem uiMenuItem;
#define uiMenuItem(this) ((uiMenuItem *) (this))
 void uiMenuItemEnable(uiMenuItem *m);
 void uiMenuItemDisable(uiMenuItem *m);
 void uiMenuItemOnClicked(uiMenuItem *m, void (*f)(uiMenuItem *sender, uiWindow *window, void *data), void *data);
 int uiMenuItemChecked(uiMenuItem *m);
 void uiMenuItemSetChecked(uiMenuItem *m, int checked);
typedef struct uiMenu uiMenu;
#define uiMenu(this) ((uiMenu *) (this))
 uiMenuItem *uiMenuAppendItem(uiMenu *m, const char *name);
 uiMenuItem *uiMenuAppendCheckItem(uiMenu *m, const char *name);
 uiMenuItem *uiMenuAppendQuitItem(uiMenu *m);
 uiMenuItem *uiMenuAppendPreferencesItem(uiMenu *m);
 uiMenuItem *uiMenuAppendAboutItem(uiMenu *m);
 void uiMenuAppendSeparator(uiMenu *m);
 uiMenu *uiNewMenu(const char *name);
 char *uiOpenFile(uiWindow *parent);
 char *uiSaveFile(uiWindow *parent);
 void uiMsgBox(uiWindow *parent, const char *title, const char *description);
 void uiMsgBoxError(uiWindow *parent, const char *title, const char *description);
typedef struct uiArea uiArea;
typedef struct uiAreaHandler uiAreaHandler;
typedef struct uiAreaDrawParams uiAreaDrawParams;
typedef struct uiAreaMouseEvent uiAreaMouseEvent;
typedef struct uiAreaKeyEvent uiAreaKeyEvent;
typedef struct uiDrawContext uiDrawContext;
struct uiAreaHandler {
	void (*Draw)(uiAreaHandler *, uiArea *, uiAreaDrawParams *);
	void (*MouseEvent)(uiAreaHandler *, uiArea *, uiAreaMouseEvent *);
	void (*MouseCrossed)(uiAreaHandler *, uiArea *, int left);
	void (*DragBroken)(uiAreaHandler *, uiArea *);
	int (*KeyEvent)(uiAreaHandler *, uiArea *, uiAreaKeyEvent *);
};
#define uiArea(this) ((uiArea *) (this))
 void uiAreaSetSize(uiArea *a, int width, int height);
 void uiAreaQueueRedrawAll(uiArea *a);
 void uiAreaScrollTo(uiArea *a, double x, double y, double width, double height);
 void uiAreaBeginUserWindowMove(uiArea *a);
 void uiAreaBeginUserWindowResize(uiArea *a, uiWindowResizeEdge edge);
 uiArea *uiNewArea(uiAreaHandler *ah);
 uiArea *uiNewScrollingArea(uiAreaHandler *ah, int width, int height);
struct uiAreaDrawParams {
	uiDrawContext *Context;
	double AreaWidth;
	double AreaHeight;
	double ClipX;
	double ClipY;
	double ClipWidth;
	double ClipHeight;
};
typedef struct uiDrawPath uiDrawPath;
typedef struct uiDrawBrush uiDrawBrush;
typedef struct uiDrawStrokeParams uiDrawStrokeParams;
typedef struct uiDrawMatrix uiDrawMatrix;
typedef struct uiDrawBrushGradientStop uiDrawBrushGradientStop;
#define uiDrawDefaultMiterLimit 10.0
struct uiDrawMatrix {
	double M11;
	double M12;
	double M21;
	double M22;
	double M31;
	double M32;
};
struct uiDrawBrush {
	uiDrawBrushType Type;
	double R;
	double G;
	double B;
	double A;
	double X0;		
	double Y0;		
	double X1;		
	double Y1;		
	double OuterRadius;		
	uiDrawBrushGradientStop *Stops;
	size_t NumStops;
};
struct uiDrawBrushGradientStop {
	double Pos;
	double R;
	double G;
	double B;
	double A;
};
struct uiDrawStrokeParams {
	uiDrawLineCap Cap;
	uiDrawLineJoin Join;
	double Thickness;
	double MiterLimit;
	double *Dashes;
	size_t NumDashes;
	double DashPhase;
};
 uiDrawPath *uiDrawNewPath(uiDrawFillMode fillMode);
 void uiDrawFreePath(uiDrawPath *p);
 void uiDrawPathNewFigure(uiDrawPath *p, double x, double y);
 void uiDrawPathNewFigureWithArc(uiDrawPath *p, double xCenter, double yCenter, double radius, double startAngle, double sweep, int negative);
 void uiDrawPathLineTo(uiDrawPath *p, double x, double y);
 void uiDrawPathArcTo(uiDrawPath *p, double xCenter, double yCenter, double radius, double startAngle, double sweep, int negative);
 void uiDrawPathBezierTo(uiDrawPath *p, double c1x, double c1y, double c2x, double c2y, double endX, double endY);
 void uiDrawPathCloseFigure(uiDrawPath *p);
 void uiDrawPathAddRectangle(uiDrawPath *p, double x, double y, double width, double height);
 void uiDrawPathEnd(uiDrawPath *p);
 void uiDrawStroke(uiDrawContext *c, uiDrawPath *path, uiDrawBrush *b, uiDrawStrokeParams *p);
 void uiDrawFill(uiDrawContext *c, uiDrawPath *path, uiDrawBrush *b);
 void uiDrawMatrixSetIdentity(uiDrawMatrix *m);
 void uiDrawMatrixTranslate(uiDrawMatrix *m, double x, double y);
 void uiDrawMatrixScale(uiDrawMatrix *m, double xCenter, double yCenter, double x, double y);
 void uiDrawMatrixRotate(uiDrawMatrix *m, double x, double y, double amount);
 void uiDrawMatrixSkew(uiDrawMatrix *m, double x, double y, double xamount, double yamount);
 void uiDrawMatrixMultiply(uiDrawMatrix *dest, uiDrawMatrix *src);
 int uiDrawMatrixInvertible(uiDrawMatrix *m);
 int uiDrawMatrixInvert(uiDrawMatrix *m);
 void uiDrawMatrixTransformPoint(uiDrawMatrix *m, double *x, double *y);
 void uiDrawMatrixTransformSize(uiDrawMatrix *m, double *x, double *y);
 void uiDrawTransform(uiDrawContext *c, uiDrawMatrix *m);
 void uiDrawClip(uiDrawContext *c, uiDrawPath *path);
 void uiDrawSave(uiDrawContext *c);
 void uiDrawRestore(uiDrawContext *c);
typedef struct uiAttribute uiAttribute;
 void uiFreeAttribute(uiAttribute *a);
 uiAttributeType uiAttributeGetType(const uiAttribute *a);
 uiAttribute *uiNewFamilyAttribute(const char *family);
 const char *uiAttributeFamily(const uiAttribute *a);
 uiAttribute *uiNewSizeAttribute(double size);
 double uiAttributeSize(const uiAttribute *a);
typedef struct uiAttributedString uiAttributedString;
typedef struct uiFontButton uiFontButton;
 void uiFontButtonOnChanged(uiFontButton *b, void (*f)(uiFontButton *, void *), void *data);
struct uiAreaMouseEvent {
	double X;
	double Y;
	double AreaWidth;
	double AreaHeight;
	int Down;
	int Up;
	int Count;
	uiModifiers Modifiers;
	uint64_t Held1To64;
};
struct uiAreaKeyEvent {
	char Key;
	uiExtKey ExtKey;
	uiModifiers Modifier;
	uiModifiers Modifiers;
	int Up;
};
typedef struct uiColorButton uiColorButton;
 void uiColorButtonOnChanged(uiColorButton *b, void (*f)(uiColorButton *, void *), void *data);