libui.odin


@(default_calling_convention="c")
foreign lib {
	// TODO document that tm_wday and tm_yday are undefined, and tm_isdst should be -1
	// TODO document that for both sides
	// TODO document time zone conversions or lack thereof
	// TODO for Time: define what values are returned when a part is missing
	uiDateTimePickerTime      :: proc(d: ^uiDateTimePicker, time: ^tm) ---
	uiDateTimePickerSetTime   :: proc(d: ^uiDateTimePicker, time: ^tm) ---
	uiDateTimePickerOnChanged :: proc(d: ^uiDateTimePicker, f: proc "c" (^uiDateTimePicker, rawptr), data: rawptr) ---
	uiNewDateTimePicker       :: proc() -> ^uiDateTimePicker ---
	uiNewDatePicker           :: proc() -> ^uiDateTimePicker ---
	uiNewTimePicker           :: proc() -> ^uiDateTimePicker ---
}

uiMultilineEntry :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiMultilineEntryText           :: proc(e: ^uiMultilineEntry) -> cstring ---
	uiMultilineEntrySetText        :: proc(e: ^uiMultilineEntry, text: cstring) ---
	uiMultilineEntryAppend         :: proc(e: ^uiMultilineEntry, text: cstring) ---
	uiMultilineEntryOnChanged      :: proc(e: ^uiMultilineEntry, f: proc "c" (e: ^uiMultilineEntry, data: rawptr), data: rawptr) ---
	uiMultilineEntryReadOnly       :: proc(e: ^uiMultilineEntry) -> i32 ---
	uiMultilineEntrySetReadOnly    :: proc(e: ^uiMultilineEntry, readonly: i32) ---
	uiNewMultilineEntry            :: proc() -> ^uiMultilineEntry ---
	uiNewNonWrappingMultilineEntry :: proc() -> ^uiMultilineEntry ---
}

uiMenuItem :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiMenuItemEnable     :: proc(m: ^uiMenuItem) ---
	uiMenuItemDisable    :: proc(m: ^uiMenuItem) ---
	uiMenuItemOnClicked  :: proc(m: ^uiMenuItem, f: proc "c" (sender: ^uiMenuItem, window: ^uiWindow, data: rawptr), data: rawptr) ---
	uiMenuItemChecked    :: proc(m: ^uiMenuItem) -> i32 ---
	uiMenuItemSetChecked :: proc(m: ^uiMenuItem, checked: i32) ---
}

uiMenu :: struct {}

@(default_calling_convention="c")
foreign lib {
	uiMenuAppendItem            :: proc(m: ^uiMenu, name: cstring) -> ^uiMenuItem ---
	uiMenuAppendCheckItem       :: proc(m: ^uiMenu, name: cstring) -> ^uiMenuItem ---
	uiMenuAppendQuitItem        :: proc(m: ^uiMenu) -> ^uiMenuItem ---
	uiMenuAppendPreferencesItem :: proc(m: ^uiMenu) -> ^uiMenuItem ---
	uiMenuAppendAboutItem       :: proc(m: ^uiMenu) -> ^uiMenuItem ---
	uiMenuAppendSeparator       :: proc(m: ^uiMenu) ---
	uiNewMenu                   :: proc(name: cstring) -> ^uiMenu ---
	uiOpenFile                  :: proc(parent: ^uiWindow) -> cstring ---
	uiSaveFile                  :: proc(parent: ^uiWindow) -> cstring ---
	uiMsgBox                    :: proc(parent: ^uiWindow, title: cstring, description: cstring) ---
	uiMsgBoxError               :: proc(parent: ^uiWindow, title: cstring, description: cstring) ---
}

uiArea        :: struct {}
uiDrawContext :: struct {}

uiAreaHandler :: struct {
	Draw: proc "c" (^uiAreaHandler, ^uiArea, ^uiAreaDrawParams),

	// TODO document that resizes cause a full redraw for non-scrolling areas; implementation-defined for scrolling areas
	MouseEvent: proc "c" (^uiAreaHandler, ^uiArea, ^uiAreaMouseEvent),

	// TODO document that on first show if the mouse is already in the uiArea then one gets sent with left=0
	// TODO what about when the area is hidden and then shown again?
	MouseCrossed: proc "c" (_: ^uiAreaHandler, _: ^uiArea, left: i32),
	DragBroken:   proc "c" (^uiAreaHandler, ^uiArea),
	KeyEvent:     proc "c" (^uiAreaHandler, ^uiArea, ^uiAreaKeyEvent) -> i32,
}

// TODO RTL layouts?
// TODO reconcile edge and corner naming
uiWindowResizeEdge :: u32

uiWindowResizeEdgeTop         :: 1
uiWindowResizeEdgeLeft        :: 0
uiWindowResizeEdgeBottom      :: 3
uiWindowResizeEdgeRight       :: 2
uiWindowResizeEdgeTopRight    :: 5
uiWindowResizeEdgeBottomLeft  :: 6
uiWindowResizeEdgeBottomRight :: 7
uiWindowResizeEdgeTopLeft     :: 4

@(default_calling_convention="c")
foreign lib {
	// TODO give a better name
	// TODO document the types of width and height
	uiAreaSetSize :: proc(a: ^uiArea, width: i32, height: i32) ---

	// TODO uiAreaQueueRedraw()
	uiAreaQueueRedrawAll :: proc(a: ^uiArea) ---
	uiAreaScrollTo       :: proc(a: ^uiArea, x: f64, y: f64, width: f64, height: f64) ---

	// TODO document these can only be called within Mouse() handlers
	// TODO should these be allowed on scrolling areas?
	// TODO decide which mouse events should be accepted; Down is the only one guaranteed to work right now
	// TODO what happens to events after calling this up to and including the next mouse up?
	// TODO release capture?
	uiAreaBeginUserWindowMove   :: proc(a: ^uiArea) ---
	uiAreaBeginUserWindowResize :: proc(a: ^uiArea, edge: uiWindowResizeEdge) ---
	uiNewArea                   :: proc(ah: ^uiAreaHandler) -> ^uiArea ---
	uiNewScrollingArea          :: proc(ah: ^uiAreaHandler, width: i32, height: i32) -> ^uiArea ---
}

uiAreaDrawParams :: struct {
	Context: ^uiDrawContext,

	// TODO document that this is only defined for nonscrolling areas
	AreaWidth:  f64,
	AreaHeight: f64,
	ClipX:      f64,
	ClipY:      f64,
	ClipWidth:  f64,
	ClipHeight: f64,
}

uiDrawPath      :: struct {}
uiDrawBrushType :: u32

uiDrawBrushTypeLinearGradient :: 1
uiDrawBrushTypeSolid          :: 0
uiDrawBrushTypeRadialGradient :: 2
uiDrawBrushTypeImage          :: 3
uiDrawLineCapFlat             :: 0

uiDrawLineCap :: u32

uiDrawLineCapSquare :: 2
uiDrawLineCapRound  :: 1
uiDrawLineJoinMiter :: 0
uiDrawLineJoinRound :: 1
uiDrawLineJoinBevel :: 2

uiDrawLineJoin :: u32

// this is the default for botoh cairo and Direct2D (in the latter case, from the C++ helper functions)
// Core Graphics doesn't explicitly specify a default, but NSBezierPath allows you to choose one, and this is the initial value
// so we're good to use it too!
uiDrawDefaultMiterLimit :: 10.0

uiDrawFillMode :: u32

uiDrawFillModeWinding   :: 0
uiDrawFillModeAlternate :: 1

uiDrawMatrix :: struct {
	M11: f64,
	M12: f64,
	M21: f64,
	M22: f64,
	M31: f64,
	M32: f64,
}

uiDrawBrush :: struct {
	Type: uiDrawBrushType,

	// solid brushes
	R: f64,
	G: f64,
	B: f64,
	A: f64,

	// gradient brushes
	X0:          f64, // linear: start X, radial: start X
	Y0:          f64, // linear: start Y, radial: start Y
	X1:          f64, // linear: end X, radial: outer circle center X
	Y1:          f64, // linear: end Y, radial: outer circle center Y
	OuterRadius: f64, // radial gradients only
	Stops:       ^uiDrawBrushGradientStop,
	NumStops:    c.size_t,
}

uiDrawBrushGradientStop :: struct {
	Pos: f64,
	R:   f64,
	G:   f64,
	B:   f64,
	A:   f64,
}

uiDrawStrokeParams :: struct {
	Cap:  uiDrawLineCap,
	Join: uiDrawLineJoin,

	// TODO what if this is 0? on windows there will be a crash with dashing
	Thickness:  f64,
	MiterLimit: f64,
	Dashes:     ^f64,

	// TOOD what if this is 1 on Direct2D?
	// TODO what if a dash is 0 on Cairo or Quartz?
	NumDashes: c.size_t,
	DashPhase: f64,
}

@(default_calling_convention="c")
foreign lib {
	uiDrawNewPath              :: proc(fillMode: uiDrawFillMode) -> ^uiDrawPath ---
	uiDrawFreePath             :: proc(p: ^uiDrawPath) ---
	uiDrawPathNewFigure        :: proc(p: ^uiDrawPath, x: f64, y: f64) ---
	uiDrawPathNewFigureWithArc :: proc(p: ^uiDrawPath, xCenter: f64, yCenter: f64, radius: f64, startAngle: f64, sweep: f64, negative: i32) ---
	uiDrawPathLineTo           :: proc(p: ^uiDrawPath, x: f64, y: f64) ---

	// notes: angles are both relative to 0 and go counterclockwise
	// TODO is the initial line segment on cairo and OS X a proper join?
	// TODO what if sweep < 0?
	uiDrawPathArcTo    :: proc(p: ^uiDrawPath, xCenter: f64, yCenter: f64, radius: f64, startAngle: f64, sweep: f64, negative: i32) ---
	uiDrawPathBezierTo :: proc(p: ^uiDrawPath, c1x: f64, c1y: f64, c2x: f64, c2y: f64, endX: f64, endY: f64) ---

	// TODO quadratic bezier
	uiDrawPathCloseFigure :: proc(p: ^uiDrawPath) ---

	// TODO effect of these when a figure is already started
	uiDrawPathAddRectangle :: proc(p: ^uiDrawPath, x: f64, y: f64, width: f64, height: f64) ---
	uiDrawPathEnd          :: proc(p: ^uiDrawPath) ---
	uiDrawStroke           :: proc(_c: ^uiDrawContext, path: ^uiDrawPath, b: ^uiDrawBrush, p: ^uiDrawStrokeParams) ---
	uiDrawFill             :: proc(_c: ^uiDrawContext, path: ^uiDrawPath, b: ^uiDrawBrush) ---

	// TODO primitives:
	// - rounded rectangles
	// - elliptical arcs
	// - quadratic bezier curves
	uiDrawMatrixSetIdentity    :: proc(m: ^uiDrawMatrix) ---
	uiDrawMatrixTranslate      :: proc(m: ^uiDrawMatrix, x: f64, y: f64) ---
	uiDrawMatrixScale          :: proc(m: ^uiDrawMatrix, xCenter: f64, yCenter: f64, x: f64, y: f64) ---
	uiDrawMatrixRotate         :: proc(m: ^uiDrawMatrix, x: f64, y: f64, amount: f64) ---
	uiDrawMatrixSkew           :: proc(m: ^uiDrawMatrix, x: f64, y: f64, xamount: f64, yamount: f64) ---
	uiDrawMatrixMultiply       :: proc(dest: ^uiDrawMatrix, src: ^uiDrawMatrix) ---
	uiDrawMatrixInvertible     :: proc(m: ^uiDrawMatrix) -> i32 ---
	uiDrawMatrixInvert         :: proc(m: ^uiDrawMatrix) -> i32 ---
	uiDrawMatrixTransformPoint :: proc(m: ^uiDrawMatrix, x: ^f64, y: ^f64) ---
	uiDrawMatrixTransformSize  :: proc(m: ^uiDrawMatrix, x: ^f64, y: ^f64) ---
	uiDrawTransform            :: proc(_c: ^uiDrawContext, m: ^uiDrawMatrix) ---

	// TODO add a uiDrawPathStrokeToFill() or something like that
	uiDrawClip    :: proc(_c: ^uiDrawContext, path: ^uiDrawPath) ---
	uiDrawSave    :: proc(_c: ^uiDrawContext) ---
	uiDrawRestore :: proc(_c: ^uiDrawContext) ---
}

uiAttribute :: struct {}

@(default_calling_convention="c")
foreign lib {
	// @role uiAttribute destructor
	// uiFreeAttribute() frees a uiAttribute. You generally do not need to
	// call this yourself, as uiAttributedString does this for you. In fact,
	// it is an error to call this function on a uiAttribute that has been
	// given to a uiAttributedString. You can call this, however, if you
	// created a uiAttribute that you aren't going to use later.
	uiFreeAttribute :: proc(a: ^uiAttribute) ---
}

uiAttributeTypeSize    :: 1
uiAttributeTypeFamily  :: 0
uiAttributeTypeItalic  :: 3
uiAttributeTypeWeight  :: 2
uiAttributeTypeStretch :: 4

// uiAttributeType holds the possible uiAttribute types that may be
// returned by uiAttributeGetType(). Refer to the documentation for
// each type's constructor function for details on each type.
uiAttributeType :: u32

uiAttributeTypeColor          :: 5
uiAttributeTypeBackground     :: 6
uiAttributeTypeUnderline      :: 7
uiAttributeTypeUnderlineColor :: 8
uiAttributeTypeFeatures       :: 9

@(default_calling_convention="c")
foreign lib {
	// uiAttributeGetType() returns the type of a.
	// TODO I don't like this name
	uiAttributeGetType :: proc(a: ^uiAttribute) -> uiAttributeType ---

	// uiNewFamilyAttribute() creates a new uiAttribute that changes the
	// font family of the text it is applied to. family is copied; you do not
	// need to keep it alive after uiNewFamilyAttribute() returns. Font
	// family names are case-insensitive.
	uiNewFamilyAttribute :: proc(family: cstring) -> ^uiAttribute ---

	// uiAttributeFamily() returns the font family stored in a. The
	// returned string is owned by a. It is an error to call this on a
	// uiAttribute that does not hold a font family.
	uiAttributeFamily :: proc(a: ^uiAttribute) -> cstring ---

	// uiNewSizeAttribute() creates a new uiAttribute that changes the
	// size of the text it is applied to, in typographical points.
	uiNewSizeAttribute :: proc(size: f64) -> ^uiAttribute ---

	// uiAttributeSize() returns the font size stored in a. It is an error to
	// call this on a uiAttribute that does not hold a font size.
	uiAttributeSize :: proc(a: ^uiAttribute) -> f64 ---
}
